<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    >

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up"
        android:textSize="40dp"
        android:textColor="#999999"
        android:layout_marginTop="66dp"
        android:layout_alignLeft="@+id/et1"
        />


    <EditText
        android:id="@+id/et1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/reg_name"
        android:textColor="#666666"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="166dp" />

    <EditText
        android:id="@+id/et2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/reg_enterpw"
        android:textColor="#666666"
        android:layout_below="@id/et1"
        />

    <EditText
        android:id="@+id/et3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/reg_confirmpw"
        android:textColor="#666666"
        android:layout_below="@id/et2"
        />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_below="@+id/et3"
        />

    <Button
        android:id="@+id/bt1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_below="@+id/tv2"
        android:layout_alignLeft="@+id/et2"
        android:background="#e000000"
        />


</RelativeLayout>
