<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fadingEdge="vertical">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leaveKindStr"
            android:textSize="@dimen/tvCommonSize"
            android:padding="@dimen/tvPadSize"
            android:textColor="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <Spinner
                android:padding="@dimen/tvPadSize"
                android:id="@+id/spin_leaveKind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                />

            <ImageView
                android:padding="@dimen/tvPadSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/font_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/font_bg"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/tvPadSize"
            android:text="@string/myLeaveStr"
            android:textSize="@dimen/tvCommonSize"
            android:textColor="@color/colorPrimary"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/font_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/tvPadSize"
            android:text="@string/beginLeaveStr"
            android:textColor="@color/black"
            android:textSize="@dimen/tvCommonSize"
            />

        <LinearLayout
            android:id="@+id/lay_dateBegin"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <DatePicker
                android:visibility="gone"
                android:id="@+id/dateP_begin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </DatePicker>

            <ImageView
                android:padding="@dimen/tvPadSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow"
                />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/font_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endLeaveStr"
            android:padding="@dimen/tvPadSize"
            android:textColor="@color/black"
            android:textSize="@dimen/tvCommonSize"
            />

        <LinearLayout
            android:id="@+id/lay_dateEnd"
            android:gravity="right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <DatePicker
                android:visibility="gone"
                android:id="@+id/dateP_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </DatePicker>

            <ImageView
                android:padding="@dimen/tvPadSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/arrow"
                />

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/font_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="@dimen/tvPadSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/tvCommonSize"
            android:text="@string/timeStr"
            android:textColor="@color/black"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintTimeStr"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/font_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leaveReasonStr"
            android:textColor="@color/black"
            android:textSize="@dimen/tvCommonSize" />

        <EditText
            android:id="@+id/add_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/edit_text"
            android:enabled="true"
            android:gravity="top"
            android:hint="@string/hintLeaveReasonStr"
            android:inputType="textMultiLine"
            android:maxLines="8"
            android:minLines="6"
            android:padding="@dimen/tvPadSize"
            android:scrollbars="vertical" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/font_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:padding="@dimen/tvPadSize"
            android:textSize="@dimen/tvCommonSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pictureStr"
            android:textColor="@color/black"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            >

            <ImageView
                android:id="@+id/iv_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/photo"
                />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/font_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:padding="@dimen/tvPadSize"
            android:textSize="@dimen/tvCommonSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/approverStr"
            android:textColor="@color/black"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/approve"
            />

        <TextView
            android:textColor="@color/black"
            android:textSize="@dimen/tvCommonSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacherStr"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/approve"
                />

            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/tvCommonSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructorStr"
                android:layout_gravity="center"
                />

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submitStr"
        android:textSize="@dimen/tvCommonSize"
        android:background="@color/blue"
        />

</LinearLayout>
</ScrollView>