<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fadingEdge="vertical">
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">


   <!--自定义的轮播图控件-->
   <org.jit.sose.eschool.lunbotu.ImageBarnnerFramLayout
       android:id="@+id/image_group"
       android:layout_width="match_parent"
       android:layout_height="200dp">
   </org.jit.sose.eschool.lunbotu.ImageBarnnerFramLayout>

   <View
       android:layout_width="match_parent"
       android:layout_height="5dp"
       android:background="@color/font_bg"/>


      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          >

         <TextView
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:text="@string/socailStr"
             android:textSize="@dimen/bigFontSize"
             android:gravity="center"
             android:textColor="@color/colorPrimary"
             />

      </LinearLayout>

   <View
       android:layout_width="match_parent"
       android:layout_height="@dimen/shadowSize"
       android:background="@color/font_bg"/>

      <TableRow
          android:layout_marginTop="1dp"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:orientation="horizontal">

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="1"
             >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/y_xx"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/YxxStr"
                android:textSize="@dimen/tvCommonSize"
                android:textColor="@color/black"
                android:layout_gravity="center"
                />

         </LinearLayout>

         <View
             android:layout_width="2dp"
             android:layout_height="match_parent"
             android:background="@color/font_bg"/>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="1"
             >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/y_js1"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/YydStr"
                android:textSize="@dimen/tvCommonSize"
                android:textColor="@color/black"
                />

         </LinearLayout>

      </TableRow>

   <View
       android:layout_width="match_parent"
       android:layout_height="2dp"
       android:background="@color/font_bg"/>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:orientation="horizontal"
          >

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="1"
             >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/y_sy"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/YsyStr"
                android:textSize="@dimen/tvCommonSize"
                android:textColor="@color/black"
                />

         </LinearLayout>

         <View
             android:layout_width="2dp"
             android:layout_height="match_parent"
             android:background="@color/font_bg"/>

         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="1"
             >

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:background="@drawable/pic3"
                android:layout_gravity="center"
                />
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/YkdStr"
                android:textSize="@dimen/tvCommonSize"
                android:textColor="@color/black"
                />

         </LinearLayout>

      </TableRow>
   <View
       android:layout_width="match_parent"
       android:layout_height="2dp"
       android:background="@color/font_bg"/>



</LinearLayout>
</ScrollView>